@@ -35,6 +35,11 @@ class TC_ErrorFittedFunction_AExpBX32 < Test::Unit::TestCase
   #def test_initialize
   #end
 
+  def test_description
+    assert_equal("f(x) = 3.0 * exp( - 1.3862943611198906 * x)", @aebx00.description)
+  end
+
+
   def test_fit
     corrects = [3.0, - 2.0*Math::log(2.0)]
     results = @aebx00.coefficients
