@@ -3,6 +3,7 @@
 == Master (for 0.0.7)
 * Add Malge::ErrorFittedFunction::AXInv2
 * Add Malge::ErrorFittedFunction::AXInv3
+* Malge::ErrorFittedFunction may raise UnableCalculationError if contain not finit value in coefficients after fitting.
 
 == Version 0.0.6)
 * Rename Malge::ErrorFittedFunction::AXInv to Malge::ErrorFittedFunction::AXInvPlusB
